exams/8.ingress/3.app-test-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: haproxy-controller
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
      - finbertmds.test
      secretName: finbertmds-test
  rules:
  - host: finbertmds.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-test-svc
            port:
              number: 80
